fix/ changed gap

--- a/src/components/OurVolunteers/OurVolunteers.module.css
+++ b/src/components/OurVolunteers/OurVolunteers.module.css
@@ -104,7 +104,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    gap: 2px;
+    gap: 0px;
     align-items: flex-end;
   }
 }
